Partially implemented load_mailbox function

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -13,6 +13,9 @@
 
     <div id="emails-view">
     </div>
+    <!-- Display the contents of a specific email -->
+    <div id="email-view">
+    </div>
 
     <div id="compose-view">
         <h3>New Email</h3>
