--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -2,39 +2,39 @@
 {% load static %}
 
 {% block body %}
-    <h2>{{ request.user.email }}</h2>
+<h2>{{ request.user.email }}</h2>
+<button class="btn btn-sm btn-outline-dark" id="inbox"><span> <i class="fas fa-inbox"></i> </span>Inbox</button>
+<button class="btn btn-sm btn-outline-primary" id="compose"> <span><i class="fas fa-pen"></i></span> Compose</button>
+<button class="btn btn-sm btn-outline-success" id="sent"> <span><i class="far fa-paper-plane"></i></span>Sent</button>
+<button class="btn btn-sm btn-outline-info" id="archived"> <span><i class="fas fa-archive"></i></span>Archived</button>
+<a class="btn btn-sm btn-outline-danger" href="{% url 'logout' %}"> <span><i class="fas fa-sign-out-alt"></i></span>Log Out</a>
+<hr>
 
-    <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
-    <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
-    <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-    <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
+<div id="emails-view">
+</div>
+<!-- Display the contents of a specific email -->
+<div id="email-view">
+</div>
+
+<div id="compose-view">
+    <h3 class="text-center">New Email</h3>
     <hr>
-
-    <div id="emails-view">
-    </div>
-    <!-- Display the contents of a specific email -->
-    <div id="email-view">
-    </div>
-
-    <div id="compose-view">
-        <h3>New Email</h3>
-        <form id="compose-form">
-            <div class="form-group">
-                From: <input disabled class="form-control" value="{{ request.user.email }}">
-            </div>
-            <div class="form-group">
-                To: <input id="compose-recipients" class="form-control">
-            </div>
-            <div class="form-group">
-                <input class="form-control" id="compose-subject" placeholder="Subject">
-            </div>
-            <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary btn-sm mt-1"/>
-        </form>
-    </div>
-{% endblock %}
+    <form id="compose-form">
+        <div class="form-group">
+            From: <input disabled class="form-control" value="{{ request.user.email }}">
+        </div>
+        <div class="form-group">
+            To: <input id="compose-recipients" class="form-control">
+        </div>
+        <div class="form-group">
+            <input class="form-control" id="compose-subject" placeholder="Subject">
+        </div>
+        <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
+        <input type="submit" class="btn btn-primary btn-sm mt-1">
+    </form>
+</div>
+ {% endblock %}
 
 {% block script %}
-    <script src="{% static 'mail/inbox.js' %}"></script>
+<script src="{% static 'mail/inbox.js' %}"></script>
 {% endblock %}
