--- a/mail/templates/mail/layout.html
+++ b/mail/templates/mail/layout.html
@@ -2,17 +2,30 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>{% block title %}Mail{% endblock %}</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
-        {% block script %}
-        {% endblock %}
-    </head>
-    <body>
-        <div class="container">
-            {% block body %}
-            {% endblock %}
+
+<head>
+    <title>{% block title %}Mail{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'mail/styles.css' %}">
+    <script src="https://kit.fontawesome.com/1f9144282a.js" crossorigin="anonymous"></script>
+    {% block script %}
+    {% endblock %}
+</head>
+
+<body>
+    <!-- Success message -->
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-5 mt-3">
+                <div id="success-msg" style="display: none;" class="alert alert-success" role="success">
+                    <p class="text-center my-1 mx-1">Message sent sucessfully</p>
+                </div>
+            </div>
         </div>
-    </body>
+        {% block body %}
+        {% endblock %}
+    </div>
+</body>
+
 </html>
