--- a/mail/templates/mail/login.html
+++ b/mail/templates/mail/login.html
@@ -1,24 +1,44 @@
 {% extends "mail/layout.html" %}
+{% load static %}
 
 {% block body %}
+<section class="vh-100">
+    <div class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-md-9 col-lg-6 col-xl-5">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
+                    class="img-fluid" alt="Sample image">
+            </div>
+            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+                <h3 class="text-center my-3">Log In</h3>
+                {% if message %}
+                <div>{{ message }}</div>
+                {% endif %}
+                <form action="{% url 'login' %}" method="POST">
+                    {% csrf_token %}
+                    <!-- Email input -->
+                    <div class="form-outline mb-4">
+                        <input type="email" name="email" class="form-control"
+                            placeholder="Enter a valid email address" />
+                    </div>
 
-    <h2>Login</h2>
+                    <!-- Password input -->
+                    <div class="form-outline mb-3">
+                        <input type="password" name="password" class="form-control" placeholder="Enter password" />
+                    </div>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+                    <div class="text-center text-lg-start mt-4 pt-2">
+                        <button type="submit" class="btn btn-primary btn-block"
+                            style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
+                        <p class="small fw-bold mt-2 pt-1 mb-0">Don't have an account? <a
+                                href="{% url 'register' %}">Register</a></p>
+                    </div>
 
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="email" name="email" placeholder="Email">
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Login">
-    </form>
+    </div>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+</section>
 
 {% endblock %}
